--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,79 @@
+aiml==0.8.6
+backports-abc==0.5
+backports.shutil-get-terminal-size==1.0.0
+BeautifulSoup==3.2.1
+beautifulsoup4==4.5.3
+bleach==2.0.0
+bs4==0.0.1
 certifi==2017.4.17
-chardet==3.0.4
 click==6.7
-Flask==0.12.2
+colorama==0.3.7
+configparser==3.5.0
+cycler==0.10.0
+decorator==4.0.11
+entrypoints==0.2.2
+enum34==1.1.6
+facebook-sdk==2.0.0
+Flask==0.12.1
+functools32==3.2.3.post2
+geolocation-python==0.2.2
 gunicorn==19.7.1
-idna==2.5
+html5lib==0.999999999
+ipykernel==4.6.1
+ipython==5.3.0
+ipython-genutils==0.1.0
+ipywidgets==6.0.0
 itsdangerous==0.24
 Jinja2==2.9.6
 jsonify==0.5
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.0.1
+jupyter-console==5.1.0
+jupyter-core==4.3.0
+lxml==3.7.3
 MarkupSafe==1.0
-requests==2.18.1
-urllib3==1.21.1
-Werkzeug==0.12.2
+matplotlib==2.0.2
+mistune==0.7.4
+nbconvert==5.1.1
+nbformat==4.3.0
+notebook==5.0.0
+numpy==1.13.0
+olefile==0.44
+pafy==0.5.3.1
+pandocfilters==1.4.1
+pathlib2==2.2.1
+pickleshare==0.7.4
+Pillow==4.0.0
+prompt-toolkit==1.0.14
+PyAudio==0.2.11
+PyAutoGUI==0.9.33
+pygeocoder==1.2.5
+Pygments==2.2.0
+pymessenger==0.0.7.0
+PyMsgBox==1.0.4
+pyparsing==2.2.0
+PyScreeze==0.1.9
+python-dateutil==2.6.0
+PyTweening==1.0.3
+pytz==2017.2
+pyzmq==16.0.2
+qtconsole==4.3.0
+requests==2.13.0
+requests-toolbelt==0.8.0
+scandir==1.5
+selenium==3.4.3
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
+six==1.10.0
+testpath==0.3
+tornado==4.5.1
+tqdm==4.11.2
+traitlets==4.3.2
+virtualenv==15.1.0
+wcwidth==0.1.7
+webencodings==0.5.1
+Werkzeug==0.12.1
+widgetsnbextension==2.0.0
+win-unicode-console==0.5
+youtube-dl==2017.3.2
